<resources>
    <string name="app_name">ONN</string>
    <!--Toast-->
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="net_error">网络访问错误,请稍后再试</string>
    <string name="production_series">请选择您的产品系列</string>
    <string name="party_boom">Party Boom</string>
    <string name="indoor_speaker">Indoor Speaker</string>
    <string name="rugged_speaker">Rugged Speaker</string>
    <string name="series">系列</string>
    <string name="bind_production_series">请选择您需要绑定的产品系列</string>
    <string name="device_name">PA2022P</string>
    <string name="device_bind">请选择您的产品进行蓝牙配对</string>
    <string name="connect">连接</string>
    <string name="light_model">Light Mode</string>
    <string name="light_dj">Light DJ</string>
    <string name="source">Source</string>
    <string name="blue_connect">蓝牙连接</string>
    <string name="aux_in">AUX IN</string>
    <string name="fm_radio">FM Radio</string>
    <string name="music_style">Music Style</string>
    <string name="outdoor">户外</string>
    <string name="indoor">室内</string>
    <string name="bass_up">BASS UP</string>
    <string name="agreement">使用条款 隐私说明</string>
    <string name="my_miusic_library">我的音效库</string>
    <string name="miusic_library_style_alarm">Alarm</string>
    <string name="miusic_library_style_alien">Alien</string>
    <string name="miusic_library_style_hit">Hit</string>
    <string name="miusic_library_style_kick">Kick</string>
    <string name="miusic_library_style_radio">Radio</string>
    <string name="miusic_library_style_rewind">Rewind</string>
    <string name="miusic_library_style_space">Space</string>
    <string name="miusic_library_style_relax">Relax</string>
    <string name="miusic_library_style_love">Love</string>
    <string name="scroll_light">跑马灯控制滑动带</string>
    <string name="click_flash">点击频闪</string>
    <string name="open_music_effect_library">打开音效库</string>
    <string name="select_light_color">选择跑马灯颜色</string>
    <string name="click_music_effect">点击音效</string>
    <string name="rb_collct">收藏列表</string>
    <string name="rb_search">搜索列表</string>
    <string name="please_select_language">请选择语言</string>
    <string name="language_chinese">简体中文</string>
    <string name="language_english">English</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="agree_and_use">同意并且使用</string>
    <string name="privacy_policy">隐私条款</string>


    <string name="tws_connect_title">设备TWS服务</string>
    <string name="tws_connect_content">可以将您的设备与另外一台可组TWS的设备配对，可使左右声道分别连接至两个扬声器，从而实现最佳音响效果。</string>
    <string name="tws_connect_button">开始TWS</string>
    <string name="tws_connect_cancel">取消连接</string>

    <string name="tws_disconnect_title">是否取消TWS服务？</string>
    <string name="tws_disconnect_content">如若取消，子设备音箱将会解绑。</string>
    <string name="tws_disconnect_button">取消TWS</string>
    <string name="tws_disconnect_cancel">我再考虑下</string>

    <string name="add_device_remark">添加设备备注</string>
    <string name="add_device_prompt">添加后方便您进行多个设备绑定</string>
    <string name="edit_hint">备注</string>
    <string name="Listening">您正在收听</string>
    <string name="fm_mhz">MHZ</string>
    <string name="fm_collect_success">收藏成功</string>
    <string name="fm_already_collect">您已收藏过该频道</string>
    <string name="fm_collect_cancel">取消收藏成功</string>
    <string name="device_connecting">正在连接...</string>



</resources>
