<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <Button
        android:id="@+id/bt_guide_close"
        android:layout_width="@dimen/demension_dp30"
        android:layout_height="@dimen/demension_dp30"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@mipmap/icon_guide_cancel"
        android:padding="@dimen/demension_dp10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:background="@mipmap/pic_dialog1"
        android:gravity="center"
        android:padding="@dimen/demension_dp10"
        android:text="@string/scroll_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="120dp"
        android:background="@mipmap/pic_dialog2"
        android:gravity="center"
        android:padding="@dimen/demension_dp10"
        android:text="@string/click_flash"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="16dp"
        android:background="@mipmap/pic_dialog3"
        android:gravity="center"
        android:padding="@dimen/demension_dp10"
        android:text="@string/select_light_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="48dp"
        android:background="@mipmap/pic_dialog5"
        android:gravity="center"
        android:padding="@dimen/demension_dp10"
        android:text="@string/open_music_effect_library"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="180dp"
        android:background="@mipmap/pic_dialog5"
        android:gravity="center"
        android:padding="@dimen/demension_dp10"
        android:text="@string/click_music_effect"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>