<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.fenda.onn.ui.view.ArcView
        android:id="@+id/avBg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demension_dp300"
        app:arcHeight="@dimen/demension_dp100"
        app:bgColor="@color/fd_text_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp19"
        android:layout_marginTop="@dimen/demension_dp38"
        android:src="@mipmap/icon_setting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/demension_dp20"
        android:src="@mipmap/icon_tws"
        app:layout_constraintBottom_toBottomOf="@id/ivSetting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivSetting" />

    <ImageView
        android:id="@+id/ivDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/demension_dp51"
        android:src="@mipmap/icon_device_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/demension_dp17"
        android:text="@string/device_name"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp18"
        app:layout_constraintLeft_toLeftOf="@id/ivDevice"
        app:layout_constraintTop_toBottomOf="@id/ivDevice" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp6"
        android:layout_marginRight="@dimen/demension_dp20"
        android:src="@mipmap/icon_edit"
        app:layout_constraintBottom_toBottomOf="@id/tvDeviceName"
        app:layout_constraintLeft_toRightOf="@id/tvDeviceName"
        app:layout_constraintTop_toTopOf="@id/tvDeviceName" />

    <TextView
        android:id="@+id/tvLightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp66"
        android:layout_marginTop="@dimen/demension_dp20"
        android:drawableTop="@mipmap/icon_lightmode"
        android:drawablePadding="@dimen/demension_dp10"
        android:gravity="center_horizontal"
        android:text="@string/light_model"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeviceName" />

    <TextView
        android:id="@+id/tvLightDj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/demension_dp66"
        android:drawableTop="@mipmap/icon_ligthdj"
        android:drawablePadding="@dimen/demension_dp10"
        android:gravity="center_horizontal"
        android:text="@string/light_dj"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvLightMode" />

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp33"
        android:layout_marginTop="@dimen/demension_dp18"
        android:gravity="center_horizontal"
        android:text="@string/source"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLightMode" />

    <RadioGroup
        android:id="@+id/rgConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp30"
        android:layout_marginTop="@dimen/demension_dp14"
        android:layout_marginRight="@dimen/demension_dp30"
        android:background="@drawable/rg_bg_shape"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSource">

        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_bg_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/blue_connect" />

        <RadioButton
            android:id="@+id/rbAuxIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_bg_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/aux_in" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvFm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp30"
        android:layout_marginTop="@dimen/demension_dp14"
        android:layout_marginRight="@dimen/demension_dp30"
        android:background="@drawable/textview_bg_shape"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/demension_dp30"
        android:text="@string/fm_radio"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp15"
        app:layout_constraintTop_toBottomOf="@id/rgConnect" />

    <ImageView
        android:id="@+id/ivFm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/demension_dp55"
        android:src="@mipmap/icon_fm"
        app:layout_constraintBottom_toBottomOf="@id/tvFm"
        app:layout_constraintRight_toRightOf="@id/tvFm"
        app:layout_constraintTop_toTopOf="@id/tvFm" />

    <TextView
        android:id="@+id/tvMusicStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp33"
        android:layout_marginTop="@dimen/demension_dp18"
        android:gravity="center_horizontal"
        android:text="@string/music_style"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFm" />

    <RadioGroup
        android:id="@+id/rgMusicStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp30"
        android:layout_marginTop="@dimen/demension_dp14"
        android:layout_marginRight="@dimen/demension_dp30"
        android:background="@drawable/rg_bg_shape"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvMusicStyle">

        <RadioButton
            android:id="@+id/rbIndoor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_bg_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/outdoor" />

        <RadioButton
            android:id="@+id/rbOutdoor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_bg_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/indoor" />
    </RadioGroup>


    <TextView
        android:id="@+id/tvBassuUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/demension_dp30"
        android:layout_marginTop="@dimen/demension_dp10"
        android:gravity="center_horizontal"
        android:text="@string/bass_up"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp15"
        app:layout_constraintBottom_toBottomOf="@id/cbToogle"
        app:layout_constraintLeft_toLeftOf="@id/rgMusicStyle"
        app:layout_constraintTop_toTopOf="@id/cbToogle" />

    <CheckBox
        android:id="@+id/cbToogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/demension_dp10"
        android:layout_marginRight="@dimen/demension_dp33"
        android:background="@drawable/cb_selector"
        android:button="@null"
        app:layout_constraintRight_toRightOf="@id/rgMusicStyle"
        app:layout_constraintTop_toBottomOf="@id/rgMusicStyle" />


    <TextView
        android:id="@+id/tvAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/demension_dp16"
        android:text="@string/agreement"
        android:textColor="@color/fd_bg_257dd5"
        android:textSize="@dimen/textsize_sp11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         />
</androidx.constraintlayout.widget.ConstraintLayout>