<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/language_bottom_dialog_shape"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/please_select_language"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_language">

        <RadioButton
            android:id="@+id/rb_chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/fd_text_white"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/language_chinese"
            android:textColor="@color/tv_about_text_color"
            android:textSize="@dimen/textsize_sp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language" />

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/fd_text_white"
            android:button="@null"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/language_english"
            android:textColor="@color/tv_about_text_color"
            android:textSize="@dimen/textsize_sp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fd_text_white"
        android:paddingTop="@dimen/demension_dp20"
        android:paddingBottom="@dimen/demension_dp20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_language">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="@dimen/demension_dp100"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:background="@drawable/bt_about_shape"
            android:text="@string/cancel"
            android:textColor="@color/fd_text_white"
            android:textSize="@dimen/textsize_sp18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="@dimen/demension_dp100"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bt_about_shape"
            android:text="@string/confirm"
            android:textColor="@color/fd_text_white"
            android:textSize="@dimen/textsize_sp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>