<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tws_center_dialog_shape">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/demension_dp50"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:textStyle="bold"
        android:textColor="@color/fd_text_black"
        android:textSize="@dimen/textsize_sp18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="324dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/bt_agree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/demension_dp8"
                android:text="一、引言\n
奋达重视用户的隐私。您在使用我们的服务时，我们可能会收集和使用您的相关信息。
我们希望通过本《隐私政策》向您说明，在使用我们的服务时，我们如何收集、使用、储存和分享这些信息，以及我们为您提供的访问、更新、控制和保护这些信息的方式。
本《隐私政策》与您所使用的奋达服务息息相关，希望您仔细阅读，在需要时，按照本《隐私政策》的指引，作出您认为适当的选择。
本《隐私政策》中涉及的相关技术词汇，我们尽量以简明扼要的表述，并提供进一步说明的链接，以便您的理解。
 您使用或继续使用我们的服务，即意味着同意我们按照本《隐私政策》收集、使用、储存和分享您的相关信息。
  如对本《隐私政策》或相关事宜有任何问题，请通过service@fenda.com[这个服务邮箱的地址需要再确认，我找信息部刘兵问了，
  目前我们公司没有这个服务邮箱]与我们联系。
\n二、我们可能收集的信息\n
我们提供服务时，可能会收集、储存和使用下列与您有关的信息。如果您不提供相关信息，可能无法注册成为我们的用户或无法享受我们提供的某些服务，或者无法达到相关服务拟达到的效果。
\n2.1 您提供的信息\n
您在注册账户或使用我们的服务时，向我们提供的相关个人信息，例如电话号码、电子邮件等；您通过我们的服务向其他方提供的共享信息，以及您使用我们的服务时所储存的信息。"
                android:textColor="@color/fd_text_black" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:padding="@dimen/demension_dp5"
        android:id="@+id/bt_agree"
        android:layout_width="@dimen/demension_dp130"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_about_shape"
        android:text="@string/agree_and_use"
        android:textColor="@color/fd_text_white"
        android:textSize="@dimen/textsize_sp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <Button
        android:padding="@dimen/demension_dp5"
        android:id="@+id/bt_cancel"
        android:layout_width="@dimen/demension_dp130"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_about_shape"
        android:text="@string/cancel"
        android:textColor="@color/fd_text_white"
        android:textSize="@dimen/textsize_sp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>